# clamps

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  macros.rs  wrapping.rs
src/bounded/: generic.rs  int.rs  mod.rs
src/saturating/: generic.rs  int.rs  mod.rs
src/wrapping/: generic.rs  int.rs  mod.rs
tests/: coherence.rs
