[package]
name = "clamps"
version = "0.1.2"
authors = ["Laura Powles <laura@laurapowles.com>"]
edition = "2021"

license = "MIT"
description = "Wrapping, saturating, and other forms of number clamping"
repository = "https://github.com/nebulaeandstars/clamps"

[lib]
name = "clamps"
path = "src/lib.rs"

[dependencies]
